# HomeUniteUs

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.prod  README.md  build.sh  docker-compose.yml  ecs-taskdef-revision.json  homeuniteus.db  hosthome.py  initMongo.js.example  nginx.conf  package-lock.json  package.json  requirements.txt  seed-local-db.sh  ssh-copy-id $YOUR_NAME@ec2-3-129-13-206.us-east-2.compute.amazonaws.com  ssh-copy-id $YOUR_NAME@ec2-3-129-13-206.us-east-2.compute.amazonaws.com.pub  ssh-copy-id $arshia@ec2-3-129-13-206.us-east-2.compute.amazonaws.com  ssh-copy-id $arshia@ec2-3-129-13-206.us-east-2.compute.amazonaws.com.pub  startup.sh  tsconfig.json  webpack.config.js  wsgi.py
api/: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  .openapi-generator-ignore  Dockerfile  HomeUniteUs.yaml  MANIFEST.in  README.md  env.staging.example  gHactions-e2e.md  homeuniteus.db  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-requirements.txt  tox.ini
api-v2/: .coverage  .env.example  .gitignore  README.md  homeuniteus.db  main.py  pyproject.toml  tox.ini
api-v2/alembic/: env.py
api-v2/alembic/versions/: e4c8bb426528_add_user_types.py  ec8b1c17739a_drop_unused_tables.py
api-v2/app/: crud.py  main.py  models.py  schemas.py  seed.py  utils.py
api-v2/app/access/: auth.py  crud.py  schemas.py  user.py  user_repo.py  user_roles.py
api-v2/app/api/: deps.py  main.py
api-v2/app/api/routes/: auth.py  user.py
api-v2/app/core/: config.py  db.py
api-v2/app/intake_profile/: controller.py  model.py  repository.py  schemas.py
api-v2/app/modules/: deps.py  router.py
api-v2/app/modules/access/: auth_controller.py  crud.py  schemas.py  user_controller.py  users_controller.py
api-v2/app/modules/intake_profile/: controller.py
api-v2/app/modules/tenant_housing_orgs/: controller.py  crud.py  models.py  schemas.py
api-v2/app/tenant_housing_orgs/: controller.py  crud.py  models.py  schemas.py
api-v2/app/tenant_housing_provider/: model.py  service_provider_repository.py
api-v2/tests/: conftest.py  setup_utils.py  test_alembic_migration.py  test_service_provider_controller.py
api-v2/tests/integration/: setup_utils.py  test_authentication.py  test_host_controller.py  test_housing_orgs_controller.py  test_user_repo.py
api/.devcontainer/: Dockerfile
api/.openapi-generator/: FILES
api/alembic/: env.py
api/alembic/versions/: 4f86de253491_first_forms_api.py  b5ce4c103598_ale_test.py  e4c8bb426528_add_user_types.py
api/configs/: config_properties.py  configs.py
api/openapi_server/: __main__.py  app.py  encoder.py
api/openapi_server/_spec/: openapi.yaml
api/openapi_server/ale/: notes-ale.md  outputSample.json  possibleTasks.json  schema.sql
api/openapi_server/configs/: cognito_config.py  development.py  huu_config.py  mock_aws.py  production.py  registry.py  staging.py
api/openapi_server/controllers/: admin_controller.py  auth_controller.py  forms_controller.py  guest_controller.py  guest_dashboard_controller.py  guests_controller.py  host_controller.py  hosts_controller.py  security_controller.py  service_provider_controller.py  users_controller.py
api/openapi_server/models/: README.md  __init__.py  database.py  guest.py  guest_dashboard_with_guest_id_and_application_id.py  host.py  housing_program.py  housing_program_service_provider.py  intake_question_set.py  intake_response_value.py  schema.py  user_roles.py
api/openapi_server/openapi/: openapi.yaml
api/openapi_server/openapi/parameters/: _index.yaml
api/openapi_server/openapi/paths/: forms.yaml  guestApplicationManagement.yaml  host.yaml  responses.yaml  serviceProvider.yaml  serviceProviders.yaml  users.yaml  usersEmail.yaml
api/openapi_server/openapi/schemas/: _index.yaml
api/openapi_server/repositories/: base.py  forms.py  guest_application_repository.py  guest_dashboard_repository.py  service_provider_repository.py  user_repo.py
api/openapi_server/test/: __init__.py  app_config.py  conftest.py  test_configs.py  test_guest_controller.py  test_guest_dashboard_controller.py  test_guest_dashboard_repository.py  test_guests_controller.py  test_host_controller.py  test_hosts_controller.py  test_service_provider_controller.py  test_service_provider_repository.py
api/src/alembic/: env.py
api/src/alembic/versions/: 3ceec084158f_.py
api/src/configs/: configs.py  personal_config_example.py
api/src/openapi_server/: __main__.py  exceptions.py
api/src/openapi_server/controllers/: users_controller.py
api/src/openapi_server/models/: __init__.py  applicant_type.py  (+7 more)
api/test/: test_service_provider_controller.py
api/tests/: __init__.py  conftest.py  setup_utils.py  test_alembic_migration.py  test_authentication.py  test_configs.py  test_forms_repo.py  test_forms_schema.py  test_health_check.py  test_host_controller.py  test_mocking.py  test_schema.py  test_service_provider_controller.py  test_service_provider_repository.py  test_user_repo.py
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: 281f96d4d453_dashboard_users_view.py  6ce898b0e45e_dashboard_users_read_model.py  a1a53aaf81d3_initial_migration.py  cfc4e41b69d3_initial_form_api.py  da5c81a7f16c_insert_roles.py  e4c8bb426528_add_user_types.py  fead8af85db5_refactor_users_and_roles_tables_add_.py
backend/app/: health.py  main.py  seed.py
backend/app/core/: config.py  db.py  event_store.py  interfaces.py  logging.py  message_bus.py  sa_event_store.py
backend/app/modules/: deps.py  router.py
backend/app/projections/: dashboard_users_view.py
backend/form_data/: form1.json  form2.json
backend/startup_scripts/: create_groups_users.py  entrypoint.ps1  entrypoint.sh  setup_moto_server.py
backend/tests/: cognito_setup.py  conftest.py  test_alembic_migration.py
backend/tests/integration/: test_authentication.py  test_forms.py  test_host_controller.py  test_housing_orgs_controller.py
backend/tests/unit/: test_logging.py
(+886 files in other folders)
