[tool.poetry]
name = "home unite us"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.113.0"}
sqlalchemy = "^2.0.34"
botocore = "^1.35.13"
boto3 = "^1.35.13"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
