[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi_server"
dynamic = ["version"]
authors = [
    { name="Home Unite Us", email=" homeuniteus@hackforla.org" },
]
description = "Web API for Home Unite Us"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic==1.11.1",
    "attrs==22.2.0",
    "boto3==1.22.10",
    "botocore==1.25.13",
    "certifi==2022.12.7",
    "charset-normalizer==2.0.12",
    "click==8.1.3",
    "clickclick==20.10.2",
    "colorama==0.4.4",
    "connexion [swagger-ui]==2.14.2",
    "Flask==2.2.3",
    "idna==3.3",
    "importlib-metadata==6.0.0",
    "importlib-resources==5.10.2",
    "inflection==0.5.1",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "jmespath==1.0.1",
    "jsonschema==4.18.4",
    "Mako==1.2.4",
    "MarkupSafe==2.1.1",
    "packaging==21.3",
    "psycopg2-binary==2.9.6",
    "pyparsing==3.0.8",
    "pyrsistent==0.18.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "PyYAML==6.0",
    "requests==2.31.0",
    "s3transfer==0.5.2",
    "six==1.16.0",
    "SQLAlchemy==1.4.36",
    "swagger-ui-bundle==0.0.9",
    "typing_extensions==4.5.0",
    "urllib3==1.26.9",
    "Werkzeug==2.2.3",
    "zipp==3.11.0",
    "prance==23.6.21.0",
    "openapi-spec-validator==0.6.0",
]

[project.urls]
"Homepage" = "https://github.com/hackforla/HomeUniteUs"
"Bug Tracker" = "https://github.com/hackforla/HomeUniteUs/issues"

[project.optional-dependencies]
dev = [
  "tox==4.6.4",
]
prod = [
  "gunicorn==21.2.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["openapi_server/*.yaml"]

[tool.setuptools_scm]
root = ".."